--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "node-sass": "^4.9.0",
     "nodemon": "^1.17.5"
   },
   "scripts": {
+    "start": "parcel index.html --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
