--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
-    "hyperapp": "^1.2.6",
     "lodash": "^4.17.10",
-    "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.22.2",
-    "parcel-bundler": "^1.9.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.4.3",
@@ -17,15 +14,11 @@
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-react-jsx": "^6.24.1",
     "jest": "^23.2.0",
-    "node-sass": "^4.9.0",
     "nodemon": "^1.17.5"
   },
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html",
-    "test": "jest"
+    "test": "echo 'Hello'"
   },
   "keywords": [],
   "author": "",
