--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^1.17.5"
   },
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo 'Hello'"
   },
   "keywords": [],
