--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "passport": "^0.4.0",
@@ -14,6 +18,7 @@
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "jest": "^23.2.0",
     "nodemon": "^1.17.5"
   },
