--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compression": "^1.7.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "firebase-admin": "^5.13.1",
     "helmet": "^3.13.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
