--- a/package.json
+++ b/package.json
@@ -12,12 +12,7 @@
     "firebase-admin": "^5.13.1",
     "helmet": "^3.13.0",
     "lodash": "^4.17.10",
-    "moment": "^2.22.2",
-    "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0",
-    "pg": "^7.4.3",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^4.38.0"
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "dotenv": "^6.0.0",
