--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase-admin": "^5.13.1",
+    "google-auth-library": "^1.6.1",
     "helmet": "^3.13.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2"
